--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
             <version>3.0.7</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.0</version>
+        </dependency>
 
     </dependencies>
     <build>
